--- a/checkout/index.html
+++ b/checkout/index.html
@@ -16,17 +16,16 @@
 <body>
 
     <ul class="list-group">
-        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_923_guest_user/guest_user_ebooks_videos.html">ECOM-923
-                guest user ebooks and videos:</a></li>
-        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_923_guest_user/guest_user_print.html">ECOM-923
+        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_923_guest_user/guest_user_ebooks_videos.html">guest user ebooks and videos:</a></li>
+        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_923_guest_user/guest_user_print.html">
                 guest user print:</a></li>
-        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_1158_existing_user/exisiting_user_ebooks_videos.html">ECOM-1158
+        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_1158_existing_user/exisiting_user_ebooks_videos.html">
                 existing user ebooks and videos:</a></li>
-        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_1158_existing_user/exisiting_user_print.html">ECOM-1158
+        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_1158_existing_user/exisiting_user_print.html">
                 existing user print:</a></li>
-        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_1157_new_user/ebooksandvideos/checkout_details.html">ECOM-1157
+        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_1157_new_user/ebooksandvideos/checkout_details.html">
                 new user ebooks and videos:</a></li>
-        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_1157_new_user/print/checkout_details.html">ECOM-1157
+        <li class="list-group-item"><a href="https://zarindpackt.github.io/checkout/checkout_1157_new_user/print/checkout_details.html">
                 new user print:</a></li>
     </ul>
 
